@@ -1,5 +1,11 @@
 2012-12-14  Araki Ken  <arakiken@users.sf.net>
 
+	* xlib/x_window.c: If gdk-pixbuf is not built in mlterm,
+	  "mlimgloader 0 0 0 path -c" creates cardinal data instead
+	  of creating cardinal from Pixmap.
+
+	* fb/x_window.c: Minor fixes.
+
 	* c_imagelib.c, mlimgloader/gdk-pixbuf.c:
 	  #ifndef USE_WIN32GUI -> #ifdef USE_X11
 
